--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  font-family: 'Archivo Black', sans-serif;
+}
 a {
   font-weight: 500;
   color: #646cff;
